--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,55 +1,93 @@
-# PHP CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-php/ for more details
-#
-version: 2
+version: 2.0
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/php:7.2
+      - image: circleci/php:7.3-stretch-node-browsers
       - image: circleci/mysql:5.7
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mysql:9.4
 
     environment:
       - APP_DEBUG: true
       - APP_ENV: testing
       - APP_KEY: base64:SFH8k8WagVDYjWfS091WrCm8AC2uwCSK
-      - DB_CONNECTION: circle_test
-      - MYSQL_ALLOW_EMPTY_PASSWORD: true
+      - DB_CONNECTION: circleci
 
     working_directory: ~/repo
 
     steps:
       - checkout
 
-      # Install PHP Extension
-      - run: sudo docker-php-ext-install pdo_mysql
+      - run:
+          name: install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.6.1
 
-      # Download and cache dependencies
+      - run:
+          name: Install PHP Extensions
+          command: sudo docker-php-ext-install pdo_mysql
+
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "composer.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+            - v1-dependencies-{{ checksum "laravel/composer.json" }}
+            - v1-dependencies-
 
-      - run: composer install -n --prefer-dist
+      - run:
+          name: composer install
+          working_directory: laravel
+          command: composer install -n --prefer-dist
 
       - save_cache:
           paths:
             - ./vendor
-          key: v1-dependencies-{{ checksum "composer.json" }}
+          key: v1-dependencies-{{ checksum "laravel/composer.json" }}
 
-      # run seeding
-      - run: php artisan migrate
-      - run: php artisan db:seed
+      - run:
+          name: Wait for db
+          command: dockerize -wait tcp://localhost:3306 -timeout 1m
 
-      # run tests!
-      - run: php ./vendor/bin/phpunit
+      - run:
+          name: Migration & Seeding
+          working_directory: laravel
+          command: php artisan migrate --seed
+
+      - run:
+          name: Coding rules check
+          working_directory: laravel
+          command: ./vendor/bin/phpcs --standard=phpcs.xml ./
+
+      - run:
+          name: Static code analysis
+          working_directory: laravel
+          command: php artisan code:analyse --paths='app,tests' --level=max
+
+      - run:
+          name: Unittest
+          working_directory: laravel
+          command: ./vendor/bin/phpunit
+
+      - run:
+          name: Install Chrome Driver
+          working_directory: laravel
+          command: php artisan dusk:chrome-driver 76
+
+      - run:
+          name: Start Chrome Driver
+          working_directory: laravel
+          command: ./vendor/laravel/dusk/bin/chromedriver-linux
+          background: true
+
+      - run:
+          name: Start Laravel Server
+          working_directory: laravel
+          command: php artisan serve
+          background: true
+
+      - run:
+          name: Run Dusk
+          working_directory: laravel
+          command: php artisan dusk
+          environment:
+            APP_URL: http://localhost:8000
 
       #heroku deploy
       - deploy:
