--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,93 +1,55 @@
-version: 2.0
+# PHP CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-php/ for more details
+#
+version: 2
 jobs:
   build:
     docker:
-      - image: circleci/php:7.3-stretch-node-browsers
+      # specify the version you desire here
+      - image: circleci/php:7.2
       - image: circleci/mysql:5.7
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mysql:9.4
 
     environment:
       - APP_DEBUG: true
       - APP_ENV: testing
       - APP_KEY: base64:SFH8k8WagVDYjWfS091WrCm8AC2uwCSK
       - DB_CONNECTION: circleci
+      - MYSQL_ALLOW_EMPTY_PASSWORD: true
 
     working_directory: ~/repo
 
     steps:
       - checkout
 
-      - run:
-          name: install dockerize
-          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-          environment:
-            DOCKERIZE_VERSION: v0.6.1
+      # Install PHP Extension
+      - run: sudo docker-php-ext-install pdo_mysql
 
-      - run:
-          name: Install PHP Extensions
-          command: sudo docker-php-ext-install pdo_mysql
-
+      # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "composer.json" }}
-            - v1-dependencies-
+          - v1-dependencies-{{ checksum "composer.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
 
-      - run:
-          name: composer install
-          working_directory: laravel
-          command: composer install -n --prefer-dist
+      - run: composer install -n --prefer-dist
 
       - save_cache:
           paths:
             - ./vendor
           key: v1-dependencies-{{ checksum "composer.json" }}
 
-      - run:
-          name: Wait for db
-          command: dockerize -wait tcp://localhost:3306 -timeout 1m
+      # run seeding
+      - run: php artisan migrate
+      - run: php artisan db:seed
 
-      - run:
-          name: Migration & Seeding
-          working_directory: laravel
-          command: php artisan migrate --seed
-
-      - run:
-          name: Coding rules check
-          working_directory: laravel
-          command: ./vendor/bin/phpcs --standard=phpcs.xml ./
-
-      - run:
-          name: Static code analysis
-          working_directory: laravel
-          command: php artisan code:analyse --paths='app,tests' --level=max
-
-      - run:
-          name: Unittest
-          working_directory: laravel
-          command: ./vendor/bin/phpunit
-
-      - run:
-          name: Install Chrome Driver
-          working_directory: laravel
-          command: php artisan dusk:chrome-driver 76
-
-      - run:
-          name: Start Chrome Driver
-          working_directory: laravel
-          command: ./vendor/laravel/dusk/bin/chromedriver-linux
-          background: true
-
-      - run:
-          name: Start Laravel Server
-          working_directory: laravel
-          command: php artisan serve
-          background: true
-
-      - run:
-          name: Run Dusk
-          working_directory: laravel
-          command: php artisan dusk
-          environment:
-            APP_URL: http://localhost:8000
+      # run tests!
+      - run: php ./vendor/bin/phpunit
 
       #heroku deploy
       - deploy:
@@ -96,15 +58,3 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
             fi
-
-workflows:
-  version: 2
-  build_and_deploy:
-    jobs:
-      - build
-      - deploy-prod:
-          requires:
-          - build
-          filters:
-            branches:
-              only: master            
